# mkdocs-material-template

./: .gitattributes  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: gh-deploy.yml
blog/: index.html
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  getting-started.md  license.md
docs/blog/: .authors.yml
getting-started/: index.html
license/: index.html
reference/: index.html
reference/reference-1/: index.html
reference/reference-2/: index.html
reference/reference-3/: index.html
search/: search_index.json
