[tool.poetry]
name = "mkdocs-material-template"
version = "0.1.0"
description = ""
authors = ["lifeadventurer <life0adventurer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
