[project]
name = "mkdocs-material-template"
version = "0.1.0"
description = "A Material for MkDocs Documentation Template "
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = ["mkdocs-glightbox>=0.4.0", "mkdocs-material>=9.6.16"]

[dependency-groups]
dev = ["pre-commit>=4.2.0"]
